# smart-house-api

./: .env.example  .gitignore  README.md  README_OLLAMA.md  RUFF_PYRIGHT_CORRECTIONS.md  alembic.ini  my_database  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  run_unit_tests.ps1  run_unit_tests.sh  test_ollama_ask.py  test_ollama_direct.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0c58489ba625_agregó_campos_respecto_a_la_.py  0c6d94533637_unique_constraint_in_installed_device_.py  2802224a8cb7_add_length_varchar_name_house_tables.py  314d8892805c_create_houses_area_foreign_key.py  5933a92180c1_reorder_tables.py  5a8d1b2c3f4e_add_password_reset_fields_to_user.py  6e114fd35af3_initial_schema.py  9d15ba2f6b90_merge_chip_id_y_password_reset.py  b2afb3d7e876_crear_table.py  b3ed7e018fbf_initial_schema.py  b50ce162a8c7_change_size_for_password_user_table_for_.py  b6d1ff571bea_add_chip_id_in_devices.py  c8e767f0f348_initial_scheme.py  dbcc4ca70ffd_initial_scheme.py  df52985f29cd_agregar_set_null_to_installed_devices_.py  e1697ff64077_initial_schema.py  ee37fb51b671_se_agregó_foreign_keys.py  f95482eafa05_inicial_schema.py  fbcaa71c6688_5a8d1b2c3f4e_add_password_reset_fields_.py
app/models/: __init__.py  base.py  device.py  track_device.py  user.py
app/settings/: __init__.py  enviroment.py
src/app/: main.py
src/app/api/depends/: __init__.py  auth.py  database.py  mqtt.py  service.py
src/app/api/routes/: area.py  auth.py  chat.py  device.py  house.py  installed_device.py  track_device.py  user.py  voice.py  websocket.py
src/app/api/schemas/: __init__.py  area.py  command.py  device.py  house.py  installed_device.py  state_device.py  track_device.py  user.py  voice.py
src/app/database/: __init__.py  engine.py
src/app/depends/: __init__.py  auth.py  database.py  service.py
src/app/dto/: __init__.py  user.py
src/app/entities/: __init__.py  areas.py  device.py  house.py  installed_device.py  track_device.py  user.py
src/app/exceptions/: __init__.py  areas_exceptions.py  command_exception.py  database_exceptions.py  device_exception.py  house_exception.py  installed_device.py  installed_device_exceptions.py  llm_exceptions.py  track_device_exceptions.py  user_exceptions.py
src/app/infraestructure/audio/: converter.py
src/app/infraestructure/database/: engine.py
src/app/infraestructure/email/: builder.py  email.py
src/app/infraestructure/email/templates/email/: base.html  forgot_password.html  verify_email.html
src/app/infraestructure/email/templates/email/macros/: components.html
src/app/infraestructure/llm/: gemini.py  groq.py  llm_provider.py  ollama.py
src/app/infraestructure/llm/interfaces/: base.py
src/app/infraestructure/models/: __init__.py  area.py  base.py  device.py  house.py  installed_device.py  track_device.py  user.py
src/app/infraestructure/mqtt/: client.py  provider.py
src/app/infraestructure/speech/: google.py  protocol.py  whisper.py
src/app/models/: __init__.py  area.py  base.py  device.py  devices_user.py  house.py  installed_device.py  track_device.py  user.py
src/app/repository/: __init__.py  area.py  device.py  house.py  installed_device.py  track_device.py  user.py
src/app/repository/interfaces/: __init__.py  area.py  device.py  house.py  installed_device.py  track_device.py  user.py
src/app/routes/: auth.py  device.py  user.py
src/app/schemas/: __init__.py  auth.py  device.py  user.py
src/app/scripts/: server.py  start_db.py
src/app/services/: __init__.py  areas.py  chat_service.py  command_device.py  command_voice.py  device.py  email.py  house.py  installed_device.py  ollama.py  status_device.py  token_jwt.py  track_device.py  user.py  voice_text.py
src/app/services/templates/: verification.html
src/app/settings/: __init__.py  ai_models.py  database.py  email.py  enviroment.py  mqtt.py  time.py  utils.py
tests/: README_TESTS.md  conftest.py  conftest_ollama.py  test_ask_endpoint.py  test_example.py  test_ollama_integration.py  test_ollama_service.py
tests/repository/: conftest.py  test_areas.py  test_device.py  test_house.py  test_installed_device.py  test_track_device.py  test_user.py  test_user_service.py
