[project]
name = "smart-house-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "alembic>=1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography>=46.0.5",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.133.1",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.14.0",
    "fastapi-mail>=1.6.2",
    "fastar==0.8.0",
    "faster-whisper>=1.2.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "packaging==26.0",
    "paho-mqtt>=2.1.0",
    "pluggy==1.6.0",
    "pwdlib==0.3.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.13.1",
    "pydub>=0.25.1",
    "pygments==2.19.2",
    "pyjwt>=2.12.1",
    "pymysql>=1.1.2",
    "pyright>=1.1.408",
    "pytest==9.0.2",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "rich==14.3.3",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "ruff>=0.15.5",
    "sentry-sdk==2.53.0",
    "shellingham==1.5.4",
    "speechrecognition>=3.15.2",
    "sqlalchemy>=2.0.48",
    "starlette==0.52.1",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
    "watchfiles==1.1.1",
    "websockets==16.0",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [
    ".venv",
    "dist",
    "build",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
]
ignore = [
    "E501",  # Line too long
]

[tool.pyright]
# Configuración de Pyright
typeCheckingMode = "standard"
pythonVersion = "3.14"
pythonPlatform = "Windows"

# Reportar configuraciones
reportGeneralTypeIssues = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportConstantRedefinition = "error"
reportUnusedVariable = "warning"
reportUnusedImport = "warning"
reportMissingImports = false

# Excluir directorios
exclude = ["**/node_modules", "**/__pycache__", ".git", ".venv"]

[project.scripts]
dev = "app.scripts.server:dev"
prod = "app.scripts.server:prod"
dev_uvicorn = "app.scripts.server:uvicorn_dev"
